# prompthist

./: .gitignore  .npmrc  .prettierignore  .prettierrc.json  README.md  START_PROMPT.md  TECH_STACK.md  eslint.config.js  next.config.js  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: crypto.rs  main.rs  models.rs  monitor.rs  prompt_storage.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/dashboard/: page.tsx
src/app/settings/: page.tsx
