[package]
name = "prompthist"
version = "0.1.0"
description = "AI Prompt History & Insights Tool"
authors = ["PromptHist Team"]
license = "MIT"
repository = "https://github.com/yourusername/prompthist"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
# Tauri 2.5 Core
tauri = { version = "2.5.1", features = [] }
tauri-plugin-shell = "2.2.2"
tauri-plugin-fs = "2.3.0"
tauri-plugin-dialog = "2.2.2"
tauri-plugin-process = "2.2.2"
tauri-plugin-os = "2.2.2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }

# Encryption & Security
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
base64 = "0.22"
keyring = "2.3"

# HTTP Client for Ollama
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio = { version = "1.0", features = ["full"] }

# System Monitoring
rdev = "0.4"
sysinfo = "0.30"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.8", features = ["v4", "serde"] }
num_cpus = "1.16"

# Error Handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
log = "0.4"
env_logger = "0.11"

# Utilities
dirs = "5.0"
once_cell = "1.19"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
